# ChangeLog for app-office/kchart
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.112 2010/11/04 13:42:44 hwoarang Exp $

  04 Nov 2010; Markos Chandras <hwoarang@gentoo.org> kchart-2.2.2.ebuild:
  Stable on amd64 wrt bug #340070

  04 Nov 2010; Thomas Kahle <tomka@gentoo.org> kchart-2.2.2.ebuild:
  x86 stable per bug 340070

  29 Oct 2010; Andreas K. Huettel <dilfridge@gentoo.org> metadata.xml:
  Added myself to maintainers

  20 Oct 2010; Andreas K. Huettel <dilfridge@gentoo.org>
  -kchart-2.1.1.ebuild, kchart-2.1.2.ebuild:
  Cleanup

  15 Oct 2010; Andreas K. Huettel <dilfridge@gentoo.org>
  kchart-2.2.2.ebuild:
  Drop powerpc keywords so the global package mask can be removed.

*kchart-2.2.2 (25 Sep 2010)

  25 Sep 2010; Andreas K. Huettel <dilfridge@gentoo.org>
  +kchart-2.2.2.ebuild:
  Version bump. Dummy ebuild since in koffice-2.2.x the kchart component has
  to be built together with koffice-libs. Will be (hopefully) fixed upstream
  in 2.3.

*kchart-2.1.2 (31 Mar 2010)

  31 Mar 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  +kchart-2.1.2.ebuild:
  2.1.2 version bump

*kchart-2.1.1 (27 Feb 2010)

  27 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> +kchart-2.1.1.ebuild:
  Version bump.

  24 Jan 2010; Brent Baude <ranger@gentoo.org> kchart-2.1.0.ebuild:
  Marking kchart-2.1.0 ~ppc for bug 295884

  20 Jan 2010; Brent Baude <ranger@gentoo.org> kchart-2.1.0.ebuild:
  Marking kchart-2.1.0 ~ppc64 for bug 295884

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> kchart-2.1.0.ebuild:
  Stable for HPPA (bug #295884).

  09 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  -kchart-1.6.3_p20090204.ebuild:
  Remove KOffice 1.6.3.

  17 Dec 2009; Christian Faulhammer <fauli@gentoo.org> kchart-2.1.0.ebuild:
  stable x86, bug 295327

  17 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> kchart-2.1.0.ebuild:
  amd64 stable wrt #295327
