@@ -1,29 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/kchart-2.1.0.ebuild,v 1.7 2010/06/21 13:57:21 ssuominen Exp $
-
-EAPI="2"
-
-KMNAME="koffice"
-KMMODULE="${PN}"
-inherit kde4-meta
-
-DESCRIPTION="KOffice chart application."
-
-KEYWORDS="amd64 ~ppc ~ppc64 x86"
-IUSE=""
-
-DEPEND=""
-RDEPEND="${DEPEND}"
-
-KMEXTRACTONLY="
-	libs/
-	interfaces/
-	filters/
-	plugins/
-"
-KMEXTRA="
-	filters/${KMMODULE}/
-"
-
-KMLOADLIBS="koffice-libs"
