@@ -1,6 +1,10 @@
 # ChangeLog for app-office/kchart
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.112 2010/11/04 13:42:44 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.113 2010/11/16 23:46:13 dilfridge Exp $
+
+  16 Nov 2010; Andreas K. Huettel <dilfridge@gentoo.org>
+  -kchart-2.1.0.ebuild:
+  Cleanup
 
   04 Nov 2010; Markos Chandras <hwoarang@gentoo.org> kchart-2.2.2.ebuild:
   Stable on amd64 wrt bug #340070
